--- a/src/utils/css/corrections.css
+++ b/src/utils/css/corrections.css
@@ -45,6 +45,9 @@
   transform: translate(-150px,0);
   z-index: -1;
 }
+.bg_before img {
+  z-index: inherit;
+}
 
 .contacts_after {
   transform: rotate(180deg);
