--- a/src/utils/css/corrections.css
+++ b/src/utils/css/corrections.css
@@ -82,6 +82,7 @@
   /* width: 100%; */
   top: auto;
   left: auto;
+  z-index: -1;
 }
 @media screen and (max-width: 800px) {
   .welcome_after, .welcome_before {
